credits page, import palette z-index fix

--- a/popUp.css
+++ b/popUp.css
@@ -13,6 +13,7 @@
     display: none;
     border: 1px solid ;
     gap: 1em;
+    z-index: 100;
 }
 .show{
     animation-name: fadeIn;
